--- a/dashboard/templates/ci/add_pipeline.html
+++ b/dashboard/templates/ci/add_pipeline.html
@@ -1,15 +1,27 @@
 {% extends "form_base.html" %}
+
 {% block extrascript %}
-<script src="/static/bootstrap-select/js/bootstrap-select.js"></script>
+    <script src="/static/bootstrap-select/js/bootstrap-select.js"></script>
 {% endblock %}
+
 {% block formtitle %}
-Add a new {{ package_name|title }} CI Pipeline
+{% if package_name %}
+    Add a new {{ package_name|title }} CI Pipeline
+{% else %}
+    Add a new CI Pipeline
+{% endif %}
 {% endblock %}
+
 {% block formreturnurl %}
-{% url 'package-view' package_name %}
+{% if package_name %}
+    {% url 'package-view' package_name %}
+{% else %}
+    {% url 'pipelines' %}
+{% endif %}
 {% endblock %}
+
 {% block formscript %}
-<script>
-  $(function(){$(".selectpicker").selectpicker({dropupAuto:!1,liveSearch:!0})});
-</script>
+    <script>
+      $(function(){$(".selectpicker").selectpicker({dropupAuto:!1,liveSearch:!0})});
+    </script>
 {% endblock %}
