--- a/dashboard/templates/ci/list_pipelines.html
+++ b/dashboard/templates/ci/list_pipelines.html
@@ -220,7 +220,7 @@
                 </p>
                 {% if request.user.is_staff %}
                   <div class="blank-slate-pf-main-action">
-                    <a class="btn btn-primary btn-lg" href="{% url 'settings-graph-rules-new' %}">
+                    <a class="btn btn-primary btn-lg" href="{% url 'add-ci-pipeline' %}">
                       <i class="pficon pficon-add-circle-o"></i> Create Pipeline </a>
                   </div>
                 {% endif %}
