basic UI changes

--- a/dashboard/templates/jobs/_job_form.html
+++ b/dashboard/templates/jobs/_job_form.html
@@ -54,9 +54,9 @@ function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}var poll_t
           </div>
           <button class="btn btn-default prevBtn pull-left" type="button">Previous</button>
           <button class="btn btn-default nextBtn pull-right" type="button">Next</button>
-          <span class="pull-left text-muted" style="padding-left:3%">This YML template can be used as is.<br/>
-              *<small>Currently, limited to <a href="https://koji.fedoraproject.org/koji/" target="_blank">Koji</a>
-                  Build System.</small>
+          <span class="pull-left text-muted" style="padding-left:3%">Template can be used as is.
+              <i>(limited to <a href="https://koji.fedoraproject.org/koji/" target="_blank">Koji</a>
+                  Build System)</i>
           </span>
         </div>
     </div>
