--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -68,13 +68,90 @@
     <nav class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right navbar-iconic navbar-utility">
 
-        {% if user.is_authenticated %}
+        <li class="applauncher-pf  applauncher-pf-block-list  dropdown">
+          <button class="btn btn-link dropdown-toggle nav-item-iconic" data-toggle="dropdown" href="#">
+            <span class="fa fa-th applauncher-pf-icon" aria-hidden="true"></span>
+            <span class="dropdown-title">
+              <span class="applauncher-pf-title">
+                Application Launcher
+                <span class="caret" aria-hidden="true"></span>
+              </span>
+            </span>
+          </button>
+          <ul class="dropdown-menu" role="menu">
+            <li class="applauncher-pf-item" role="presentation">
+              <a class="applauncher-pf-link" href="{% url 'settings-languages' %}" role="menuitem">
+
+                <i class="applauncher-pf-link-icon fa fa-language" aria-hidden="true"></i>
+
+                <span class="applauncher-pf-link-title">Languages</span>
+              </a>
+            </li>
+            <li class="applauncher-pf-item" role="presentation">
+              <a class="applauncher-pf-link" href="{% url 'settings-packages' %}" role="menuitem">
+
+                <i class="applauncher-pf-link-icon pficon pficon-bundle" aria-hidden="true"></i>
+
+                <span class="applauncher-pf-link-title">Packages</span>
+              </a>
+            </li>
+            <li class="applauncher-pf-item" role="presentation">
+              <a class="applauncher-pf-link" href="{% url 'jobs-yml-based' %}" role="menuitem">
+
+                <!-- Placeholder left to maintain spacing -->
+                <i class="applauncher-pf-link-icon fa fa-bolt" aria-hidden="true"></i>
+
+                <span class="applauncher-pf-link-title">Job Templates</span>
+              </a>
+            </li>
+            <li class="applauncher-pf-item" role="presentation">
+              <a class="applauncher-pf-link" href="{% url 'pipelines' %}" role="menuitem">
+
+                <i class="applauncher-pf-link-icon pficon pficon-automation" aria-hidden="true"></i>
+
+                <span class="applauncher-pf-link-title">Pipelines</span>
+              </a>
+            </li>
+            <li class="applauncher-pf-item" role="presentation">
+              <a class="applauncher-pf-link" href="{% url 'home' %}" role="menuitem">
+
+                <i class="applauncher-pf-link-icon pficon pficon-home" aria-hidden="true"></i>
+
+                <span class="applauncher-pf-link-title">Home</span>
+              </a>
+            </li>
+          </ul>
+        </li>
+
         <li class="dropdown">
-          <a href="#0" class="dropdown-toggle nav-item-iconic" id="dropdown-user" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            <span title="Username" class="fa pficon-user"></span>
-            {{ user.email }}
+          <a href="#0" class="dropdown-toggle nav-item-iconic" id="dropdown-help" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            <span title="Help" class="fa pficon-help"></span>
             <span class="caret"></span>
           </a>
+          <ul class="dropdown-menu" aria-labelledby="dropdown-help">
+            <li>
+              <a href="{% url 'howto' %}">Quick Start &amp; FAQs</a>
+            </li>
+            <li>
+              <a href="/api-docs" target="_blank">API Documentation</a>
+            </li>
+            <li>
+              <a href="http://docs.transtats.org" target="_blank">Project Documentation</a>
+            </li>
+            <li>
+              <a data-toggle="modal" data-target="#about-modal">About</a>
+            </li>
+          </ul>
+        </li>
+
+        {% if user.is_authenticated %}
+        <li class="dropdown">
+          <button class="btn btn-link dropdown-toggle nav-item-iconic" id="dropdown-user" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span title="Username" class="fa pficon-user"></span>
+            <span class="dropdown-title">
+              {{ user.email }} <span class="caret"></span>
+            </span>
+          </button>
           <ul class="dropdown-menu" aria-labelledby="dropdown-user">
             {% if user.auth_token %}
             <li>
@@ -104,32 +181,12 @@
         {% else %}
         <li>
           <a class="nav-item-iconic" href="{% if auth == 'fas' %}{% url 'oidc_authentication_init' %}{% else %}{% url 'admin:login' %}{% endif %}">
-            <span title="Login" class="fa pficon-user"></span>
+            <span title="Login" class="fa pficon-users"></span>
             Login
           </a>
         </li>
         {% endif %}
 
-        <li class="dropdown">
-          <a href="#0" class="dropdown-toggle nav-item-iconic" id="dropdown-help" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            <span title="Help" class="fa pficon-help"></span>
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="dropdown-help">
-            <li>
-              <a href="{% url 'howto' %}">Quick Start &amp; FAQs</a>
-            </li>
-            <li>
-              <a href="/api-docs" target="_blank">API Documentation</a>
-            </li>
-            <li>
-              <a href="http://docs.transtats.org" target="_blank">Project Documentation</a>
-            </li>
-            <li>
-              <a data-toggle="modal" data-target="#about-modal">About</a>
-            </li>
-          </ul>
-        </li>
       </ul>
     </nav>
   </nav>
