--- a/dashboard/templates/packages/package_list.html
+++ b/dashboard/templates/packages/package_list.html
@@ -138,7 +138,7 @@
         </a>
       </td>
       <td>
-        <a href="{{ package.upstream_url }}" target="_blank">{{ package.upstream_url }}</a>
+        <a href="{{ package.upstream_url }}" target="_blank" rel="noreferrer">{{ package.upstream_url }}</a>
         <span class="fa fa-external-link" aria-hidden="true"></span>
         <br/> 
         {% if package.upstream_last_updated %}
@@ -147,7 +147,7 @@
         {% endif %}
       </td>
       <td>
-        <a href="{{ package.platform_url }}" target="_blank">{{ package.platform_url }}</a>
+        <a href="{{ package.platform_url }}" target="_blank" rel="noreferrer">{{ package.platform_url }}</a>
         <span class="fa fa-external-link" aria-hidden="true"></span>
         <br/> 
         {% if package.platform_last_updated %}
