--- a/dashboard/templates/platforms/platform_list.html
+++ b/dashboard/templates/platforms/platform_list.html
@@ -29,7 +29,7 @@
         </div>
         <h4>
           <p class="card-pf-info text-center">
-            <a href="{{ platform.api_url }}" target="_blank">{{ platform.api_url }}</a>
+            <a href="{{ platform.api_url }}" target="_blank" rel="noreferrer">{{ platform.api_url }}</a>
             <span class="fa fa-external-link" aria-hidden="true"></span>
           </p>
         </h4>
