--- a/dashboard/templates/releases/product_release_list.html
+++ b/dashboard/templates/releases/product_release_list.html
@@ -83,7 +83,7 @@
             <span>{{ relbranch.scm_branch }}</span>
             {% endif %}
             <span class="pull-right">
-              <a href="{{ relbranch.calendar_url }}" target="_blank">iCal URL</a>
+              <a href="{{ relbranch.calendar_url }}" target="_blank" rel="noreferrer">iCal URL</a>
             </span>
           </div>
         </div>
