move to Libera.Chat

--- a/dashboard/templates/howto.html
+++ b/dashboard/templates/howto.html
@@ -140,7 +140,7 @@
                 <h3 class="text-info">I like the idea and want to contribute, how should I start?</h3>
                 <span class="text-default text-faq-ans">You're welcome! Please read <a href="https://github.com/transtats/transtats/blob/devel/CONTRIBUTING.md" target="_blank">contributing guide</a> to get started.</span>
                 <h3 class="text-info">While working with {{ app_name }} I got an issue, how should I report it?</h3>
-                <span class="text-default text-faq-ans">Feel free to create a <a href="https://github.com/transtats/transtats/issues/new" target="_blank">GitHub Issue</a> or join #transtats channel at IRC freenode.</span>
+                <span class="text-default text-faq-ans">Feel free to create a <a href="https://github.com/transtats/transtats/issues/new" target="_blank">GitHub Issue</a> or join #transtats channel at IRC Libera.Chat.</span>
                 <h3 class="text-info">Where to find what features will be available in coming {{ app_name }} release?</h3>
                 <span class="text-default text-faq-ans">Please see <a href="http://docs.transtats.org/en/latest/roadmap.html" target="_blank">roadmap</a> in docs. You may also like going through <a href="https://github.com/transtats/transtats/blob/devel/CHANGELOG.md" target="_blank">changelog</a>.</span>
             </div>
