--- a/dashboard/templates/packages/_package_details.html
+++ b/dashboard/templates/packages/_package_details.html
@@ -73,7 +73,7 @@
 </h5>
 
 {% if not package.platform_last_updated and not package.upstream_last_updated and not package.downstream_last_updated %}
-<div class="blank-slate-pf" id="blank-state-translation-stats">
+<div class="blank-slate-pf" id="blank-state-translation-stats" style="margin-top: 2%">
   <div class="blank-slate-pf-icon">
     <span class="fa fa-refresh"></span>
   </div>
