--- a/dashboard/templates/releases/release_list.html
+++ b/dashboard/templates/releases/release_list.html
@@ -116,13 +116,13 @@
 <div class="row container-fluid row-eq-height">
   <div class="panel panel-default col-xs-12 col-md-6" id="panel-release-map">
     <div class="panel-body">
-      {% tag_release_map_view %}
+      {% tag_release_map_view request %}
     </div>
   </div>
 
   <div class="panel panel-default col-xs-12 col-md-3" id="panel-trending-languages">
     <div class="panel-body">
-      {% tag_trending_languages %}
+      {% tag_trending_languages request %}
     </div>
   </div>
 
