--- a/dashboard/templates/geolocation/territory_view.html
+++ b/dashboard/templates/geolocation/territory_view.html
@@ -33,9 +33,9 @@
                   </div>
                   <div class="card-pf-body territory-cards-body">
                     <div class="territory-cards">
-                        <table class="table table-striped table-bordered">
-                            <thead>
-                                <tr><td>Locale</td><td>Language</td></tr>
+                        <table class="table table-striped">
+                            <thead style="position: sticky;top: 0">
+                                <tr><th style="width:40%">Locale</th><th>Language</th></tr>
                             </thead>
                             <tbody>
                                 {% for locale, language in territory_locales.items %}
