--- a/dashboard/templates/ci/_pipeline_configs.html
+++ b/dashboard/templates/ci/_pipeline_configs.html
@@ -36,7 +36,7 @@
                 {% endif %}
             </h2>
         </div>
-        <h5><span class="text-muted">Created on</span> {{ pipeline_config.pipeline_config_created_on }}
+        <h5><span class="text-muted">Created </span> {{ pipeline_config.pipeline_config_created_on|timesince }} ago
             <span class="text-muted">by</span> {{ pipeline_config.pipeline_config_created_by }}</h5>
 
       </div>
