--- a/dashboard/templates/ci/_pipeline_configs.html
+++ b/dashboard/templates/ci/_pipeline_configs.html
@@ -11,15 +11,11 @@
                 <span class="fa fa-ellipsis-v"></span>
               </button>
               <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropupKebabRight3">
-                <li><a href="#">Run</a></li>
-                <li class="disabled"><a href="#">Schedule</a></li>
-                <li role="separator" class="divider"></li>
                 {% if pipeline_config.pipeline_config_active %}
                   <li><a href="#">Deactivate</a></li>
                 {% else %}
                   <li><a href="#">Activate</a></li>
                 {% endif %}
-                <li role="separator" class="divider"></li>
                 <li><a href="#"><span class="text-danger">Delete</span></a></li>
               </ul>
               {% endif %}
@@ -27,7 +23,7 @@
 
             <h2 class="card-pf-title">
                 <span class="pficon pficon-blueprint"></span>
-                {% if pipeline_config.pipeline_config_repo_branches.length > 1 %}
+                {% if pipeline_config.pipeline_config_repo_branches|length > 1 %}
                     {{ pipeline_config.pipeline_config_repo_branches|join:", "|slice:":60" }} ..
                     <span class="text-info">{{ pipeline_config.pipeline_config_repo_branches|length }}</span>
                     <i class="text-muted">branches</i>
@@ -55,6 +51,14 @@
               <pre>{{ pipeline_config.pipeline_config_yaml }}</pre>
           </div>
           <div class="modal-footer">
+            {% if user.is_authenticated and pipeline_config.pipeline_config_active %}
+            <span id="executeYAML{{ forloop.counter }}" class="pull-left">
+                <button type="button"
+                        onclick="runJobYAML({{ forloop.counter }}, {{ pipeline_config.pipeline_config_id }})"
+                        class="btn btn-primary">Run</button>
+                <button type="button" class="btn btn-default" disabled>Schedule</button>
+            </span>
+            {% endif %}
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </div>
