--- a/dashboard/templates/ci/list_pipelines.html
+++ b/dashboard/templates/ci/list_pipelines.html
@@ -176,7 +176,8 @@
                               {{ pipeline.ci_push_job_template.job_template_name }}</a></dd>
                             <dt>Pull Job Template</dt>
                             <dd><a href="{% url 'jobs-yml-based' %}?template={{ pipeline.ci_pull_job_template.job_template_type }}&package={{ pipeline.ci_package.package_name }}">
-                              {{ pipeline.ci_pull_job_template.job_template_name }}</a></dd>
+                              {{ pipeline.ci_pull_job_template.job_template_name }}</a></dd><hr/>
+                            <span class="h5 pull-right">Manage <a href="{% url 'pipeline-configuration' pipeline.ci_pipeline_uuid %}">configurations</a> to automate.</span>
                           </div>
                         </div>
                       </dl>
