--- a/dashboard/templates/ci/_pipeline_configs.html
+++ b/dashboard/templates/ci/_pipeline_configs.html
@@ -49,6 +49,13 @@
           </div>
           <div class="modal-body">
               <pre>{{ pipeline_config.pipeline_config_yaml }}</pre>
+              {% if pipeline_config.pipeline_config_repo_branches|length > 1 %}
+                <div style="max-height: 60px; overflow: auto">
+                {% for branch in pipeline_config.pipeline_config_repo_branches %}
+                    <code>{{ branch }}</code>
+                {% endfor %}
+                </div>
+              {% endif %}
           </div>
           <div class="modal-footer">
             {% if user.is_authenticated and pipeline_config.pipeline_config_active %}
