--- a/dashboard/templates/ci/list_pipelines.html
+++ b/dashboard/templates/ci/list_pipelines.html
@@ -171,13 +171,14 @@
                             <dd>{{ pipeline.ci_project_details_json|get_item:"status" }}</dd>
                           </div>
                           <div class="col-md-5">
+                            <span class="h5">Manage <a href="{% url 'pipeline-configuration' pipeline.ci_pipeline_uuid %}">configurations</a> to automate jobs.</span>
+                            <hr/><div class="h5">Run the jobs manually with more control.</div>
                             <dt>Push Job Template</dt>
                             <dd><a href="{% url 'jobs-yml-based' %}?template={{ pipeline.ci_push_job_template.job_template_type }}&package={{ pipeline.ci_package.package_name }}">
                               {{ pipeline.ci_push_job_template.job_template_name }}</a></dd>
                             <dt>Pull Job Template</dt>
                             <dd><a href="{% url 'jobs-yml-based' %}?template={{ pipeline.ci_pull_job_template.job_template_type }}&package={{ pipeline.ci_package.package_name }}">
-                              {{ pipeline.ci_pull_job_template.job_template_name }}</a></dd><hr/>
-                            <span class="h5 pull-right">Manage <a href="{% url 'pipeline-configuration' pipeline.ci_pipeline_uuid %}">configurations</a> to automate.</span>
+                              {{ pipeline.ci_pull_job_template.job_template_name }}</a></dd>
                           </div>
                         </div>
                       </dl>
