--- a/dashboard/templates/ci/list_pipelines.html
+++ b/dashboard/templates/ci/list_pipelines.html
@@ -25,8 +25,12 @@
 
             {% for pipeline in pipelines %}
 
-              {% ifchanged %}<div style="background-color: white; font-size: large;" class="text-info">
-                {{ pipeline.ci_release.release_name }}</div>{% endifchanged %}
+              {% ifchanged %}
+                <div style="background-color: white; font-size: large;" class="text-info">
+                  <a href="{% url 'release-pipelines' pipeline.ci_release.release_slug %}">
+                  {{ pipeline.ci_release.release_name }}</a>
+                </div>
+              {% endifchanged %}
 
               <div class="list-group-item">
                 <div class="list-group-item-header">
