disable check on running longer pipeline configs

--- a/dashboard/templates/ci/pipeline_configuration.html
+++ b/dashboard/templates/ci/pipeline_configuration.html
@@ -99,7 +99,7 @@
                 e && $(spanID).html(e).addClass('h4')
             },
             error: function(e, t, a) {
-                e && $(spanID).html(e.responseText).addClass('h4 text-warning')
+                e && $(spanID).html(e.responseText).addClass('h4 text-danger')
             }
         })
   }
