--- a/dashboard/templates/ci/pipeline_history.html
+++ b/dashboard/templates/ci/pipeline_history.html
@@ -44,7 +44,7 @@
                     <hr/><h3>Tasks</h3>
                     <div class="list-group">
                         {% for task, details in log.job_log_json.items %}
-                        <a href="#" class="list-group-item">
+                        <a class="list-group-item">
                           <h4 class="list-group-item-heading">{{ task }}</h4>
                             {% for datetime, event in details.items|dictsortreversed:0 %}
                                 <p class="list-group-item-text">
