--- a/dashboard/templates/jobs/logs.html
+++ b/dashboard/templates/jobs/logs.html
@@ -43,7 +43,7 @@
                     <p>
                         <div class="list-group">
                             {% for task, details in log.job_log_json.items %}
-                            <a href="#" class="list-group-item">
+                            <a class="list-group-item">
                               <h4 class="list-group-item-heading">{{ task }}</h4>
                                 {% for datetime, event in details.items|dictsortreversed:0 %}
                                     <p class="list-group-item-text">
